--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -1,42 +1,19 @@
-
 html {
   box-sizing: border-box;
+  font-size: 10px;
 }
 
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
-html,
-body,
-p,
-ul,
-li,
-fieldset,
-button,
-textarea,
-hr,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   margin: 0;
   padding: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
   font-weight: normal;
 }
 
-ul {
+ol, ul {
   list-style: none;
 }
 
@@ -51,8 +28,7 @@ textarea {
   margin: 0;
 }
 
-img,
-embed, {
+img {
   height: auto;
   max-width: 100%;
 }
