--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -1,24 +1,40 @@
 html {
   box-sizing: border-box;
   font-size: 10px;
+  height: 100%;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body {
+  min-height: 100%;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
   margin: 0;
   padding: 0;
   font-weight: normal;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
-input:focus,
-textarea:focus {
+input:focus {
   outline: none;
 }
 
