--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-//  Media Queries
+//  media queries
 $phone-small-up: "(min-width: 320px)";
 $phone-large-up: "(min-width: 576px)";
 $tablet-portrait-up: "(min-width: 768px)";
